--- a/PTT/res/layout/contact_index_item.xml
+++ b/PTT/res/layout/contact_index_item.xml
@@ -1,7 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" 
-    android:textColor="#0f0f0f">
-    
-</TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    >
+    <TextView
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:paddingTop="10dip"
+	    android:paddingLeft="5dip"
+	    android:textColor="#0f0f0f"
+	    android:id="@+id/index_name">
+	</TextView>
+	<View 
+		    android:layout_width="fill_parent"
+		    android:layout_height="1px"
+		    android:background="#0f0f0f"
+		    />
+</LinearLayout>
+
