--- a/PTT/res/layout/contact_item.xml
+++ b/PTT/res/layout/contact_item.xml
@@ -4,6 +4,6 @@
         android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:padding="10dip"
-        android:drawableLeft="@drawable/ic_launcher"
+        android:drawableLeft="@drawable/ic_android"
         android:drawablePadding="10dip"
         android:gravity="center_vertical"/>
