--- a/PTT/res/layout/fragment_explore.xml
+++ b/PTT/res/layout/fragment_explore.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:text="@string/please_input_message"
-    />
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/explore_module_list"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	android:divider="@null"
+    >
+
+</ListView>
