--- a/PTT/res/menu/main.xml
+++ b/PTT/res/menu/main.xml
@@ -3,21 +3,41 @@
     tools:context="com.cnx.ptt.MainActivity" >
 
     <item
-        android:id="@+id/action_search"
-        android:orderInCategory="1"
-        android:showAsAction="always"
-        android:title="@string/action_search"
-        android:icon="@drawable/ic_action_search"/>
-    <item
         android:id="@+id/action_new"
-        android:orderInCategory="2"
+        android:orderInCategory="98"
         android:showAsAction="always"
         android:title="@string/action_new"
         android:icon="@drawable/ic_action_new"/>
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
+        android:id="@+id/action_search"
+        android:orderInCategory="97"
+        android:showAsAction="always"
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_action_search"
+        android:actionViewClass="android.widget.SearchView"/>
+    <item
+        android:id="@+id/action_overflow"
+        android:orderInCategory="99"
+        android:showAsAction="always"
+        android:title="@string/action_overflow"
+        android:icon="@drawable/ic_action_overflow">
+	    <menu>
+	        <item 
+	            android:id="@+id/memu_profile"
+	            android:icon="@drawable/ic_launcher"
+	            android:title="@string/default_user_name"
+	            />
+	        <item
+		        android:id="@+id/action_settings"
+		        android:orderInCategory="100"
+		        android:showAsAction="always"
+		        android:title="@string/action_settings"
+		        android:icon="@drawable/ic_action_settings"/>
+	        <item android:id="@+id/action_about"
+	            android:orderInCategory="100"
+		        android:showAsAction="always"
+		        android:title="@string/action_about"
+		        android:icon="@drawable/ic_action_about" />
+	    </menu>
+    </item>
 </menu>
