--- a/PTT/res/layout/activity_capture_code.xml
+++ b/PTT/res/layout/activity_capture_code.xml
@@ -1,13 +1,64 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
-    <SurfaceView android:id="@+id/preview_view"
-               android:layout_width="fill_parent"
-               android:layout_height="fill_parent"/>
-    
-    <com.cnx.ptt.zxing.ViewfinderView
-      android:id="@+id/viewfinder_view"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"/>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <SurfaceView
+            android:id="@+id/preview_view"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+        <com.cnx.ptt.zxing.ViewfinderView
+            android:id="@+id/viewfinder_view"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dip"
+            android:paddingRight="20dip"
+            android:paddingTop="10dip" >
+
+            <ImageButton
+                android:id="@+id/ib_acc_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:contentDescription="@string/button_back"
+                android:onClick="BackOnClick"
+                android:src="@drawable/ic_action_back" />
+
+            <ImageButton
+                android:id="@+id/ib_acc_loadimg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@string/button_scan_image"
+                android:onClick="LoadImageOnClick"
+                android:src="@drawable/ic_action_picture" />
+
+            <ImageButton
+                android:id="@+id/ib_acc_flash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:contentDescription="@string/button_flash_off"
+                android:src="@drawable/ic_action_flash_off"
+                android:onClick="SwitchFlashOnClick" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:onClick="SwitchFlash"
+            android:paddingBottom="100dip"
+            android:text="@string/msg_capture_qr_code"
+            android:textColor="@color/result_minor_text" />
+    </RelativeLayout>
 
 </merge>
