--- a/PTT/res/values/colors.xml
+++ b/PTT/res/values/colors.xml
@@ -26,4 +26,5 @@
   <color name="transparent">#00000000</color>
   <color name="viewfinder_laser">#ffcc0000</color> <!-- Android standard ICS color -->
   <color name="viewfinder_mask">#60000000</color>
+  <color name="viewfinder_scaner_square">#00CC00</color>
 </resources>
