--- a/PTT/res/values/ids.xml
+++ b/PTT/res/values/ids.xml
@@ -16,8 +16,11 @@
  -->
 <resources>
   <item type="id" name="decode"/>
+  <item type="id" name="decode_bmp"/>
   <item type="id" name="decode_failed"/>
   <item type="id" name="decode_succeeded"/>
+  <item type="id" name="decode_bmp_succeeded"/>
+  <item type="id" name="decode_bmp_failed"/>
   <item type="id" name="launch_product_query"/>
   <item type="id" name="quit"/>
   <item type="id" name="restart_preview"/>
