Add WAMP packages

--- a/PTT/res/layout/activity_track_time.xml
+++ b/PTT/res/layout/activity_track_time.xml
@@ -1,13 +1,79 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginBottom="25dip"
     tools:context="${packageName}.${activityClass}" >
 
     <TextView
+        android:id="@+id/track_time_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" 
-        android:id="@+id/tv_show_result"/>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="50dip"
+        android:shadowColor="@android:color/black"
+        android:shadowRadius="2.0"
+        android:textColor="@android:color/black"
+        android:textSize="55sp" />
+
+    <TextView
+        android:id="@+id/track_time_task_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/track_time_time"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@id/track_time_time"
+        android:paddingTop="35dip"
+        android:text="@string/default_time_tracking_message" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/track_time_time"
+        android:layout_centerHorizontal="true"
+        android:baselineAligned="false"
+        android:orientation="vertical"
+        android:paddingLeft="48dp"
+        android:paddingRight="48dp"
+        android:paddingTop="8dp" >
+
+        <Spinner
+            android:id="@+id/track_time_sp_role"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/track_time_sp_action"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal" >
+
+        <Button
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_action_play"
+            android:drawablePadding="8dip"
+            android:paddingRight="10dip"
+            android:text="@string/button_start_tracking"
+            android:onClick="OnStartClick" />
+
+        <Button
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_action_stop"
+            android:drawablePadding="8dip"
+            android:text="@string/button_stop_tracking"
+            android:onClick="OnStopClick" />
+    </LinearLayout>
 
 </RelativeLayout>
