--- a/PTT/res/values/styles.xml
+++ b/PTT/res/values/styles.xml
@@ -24,4 +24,9 @@
 	    <item name="android:activityCloseEnterAnimation">@anim/anim_stay</item>
 	    <item name="android:activityCloseExitAnimation">@anim/default_anim_out</item>
 	</style>
+	<style name="LoginFormContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">16dp</item>
+    </style>
 </resources>
