--- a/PTT/res/layout/activity_display_task.xml
+++ b/PTT/res/layout/activity_display_task.xml
@@ -3,6 +3,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cnx.activity.DisplayTaskActivity"
+    tools:context="com.cnx.ptt.DisplayTaskActivity"
     tools:ignore="MergeRootFrame" />
 
