--- a/PTT/res/drawable/btn_login_selector.xml
+++ b/PTT/res/drawable/btn_login_selector.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" android:drawable="@drawable/login_management_signinbutton_background_highlighted" />	
-    <item android:state_focused="true" android:drawable="@drawable/login_management_signinbutton_background_highlighted" />
-    <item android:state_selected="true" android:drawable="@drawable/login_management_signinbutton_background_highlighted" />
-    <item android:drawable="@drawable/login_management_signinbutton_background" />
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:state_pressed="false">
+		<shape android:shape="rectangle" >
+			<!-- 填充的颜色 -->
+			<solid android:color="#007ED1" />
+			<!-- 设置按钮的四个角为弧形, android:radius 弧形的半径 -->
+			<corners android:radius="15dip" />
+			<!-- padding：Button里面的文字与Button边界的间隔 -->
+			<padding android:bottom="7dp" android:left="7dp" android:right="7dp" android:top="7dp" />
+		</shape>
+	</item>
+	<item android:state_pressed="true">
+		<shape android:shape="rectangle">
+			<solid android:color="#51AAED" />
+			<corners android:radius="15dip" />
+		</shape>
+	</item>
 </selector>
+
