--- a/PTT/res/layout/message_items.xml
+++ b/PTT/res/layout/message_items.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/message_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" 
-    android:paddingBottom="4dip" 
-    android:paddingTop="4dip" 
-    android:paddingLeft="12dip"  
+    android:layout_height="wrap_content"
+    android:paddingBottom="4dip"
+    android:paddingLeft="12dip"
     android:paddingRight="12dip"
-    android:id="@+id/message_item">
-    <ImageView   
-    android:layout_alignParentLeft="true"
-    android:layout_width="wrap_content"   
-    android:layout_height="wrap_content"   
-    android:id="@+id/display_avatar_image"  
-    android:contentDescription="@string/default_user_name"
-    android:background="#CCC"
-    />   
-	<TextView   
-    android:text="@string/default_user_name"   
-    android:layout_height="wrap_content"   
-    android:layout_width="fill_parent"   
-    android:id="@+id/display_user_name"  
-    android:layout_toRightOf="@id/display_avatar_image"
-    android:paddingLeft="12dip"
-    />  
-	<TextView   
-    android:text="@string/default_message"   
-    android:layout_height="wrap_content"   
-    android:layout_width="fill_parent"   
-    android:layout_below="@+id/display_user_name"   
-    android:id="@+id/display_user_message"
-    android:layout_toRightOf="@id/display_avatar_image"
-    android:paddingLeft="12dip"
-    android:alpha="0.5"
-    />	<TextView   
-    android:id="@+id/display_message_time" 
-    android:layout_width="wrap_content"   
-    android:layout_height="wrap_content"  
-    android:layout_alignParentRight="true"
-    android:alpha="0.5"
-    />	
+    android:paddingTop="4dip" >
+
+    <ImageView
+        android:id="@+id/display_avatar_image"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentLeft="true"
+        android:background="#CCC"
+        android:contentDescription="@string/default_user_name"
+        android:src="@drawable/iv_avatar_2" />
+
+    <TextView
+        android:id="@+id/display_user_name"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/display_avatar_image"
+        android:paddingLeft="12dip"
+        android:text="@string/default_user_name" />
+
+    <TextView
+        android:id="@+id/display_user_message"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/display_user_name"
+        android:layout_toRightOf="@id/display_avatar_image"
+        android:alpha="0.5"
+        android:paddingLeft="12dip"
+        android:text="@string/default_message" />
+
+    <TextView
+        android:id="@+id/display_message_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:alpha="0.5"
+        android:text="2015-01-13 14:31:20" />
+
 </RelativeLayout>
