--- a/PTT/res/layout/task_list_item.xml
+++ b/PTT/res/layout/task_list_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dip" >
+    android:padding="8dip" >
 
     <LinearLayout
         android:id="@+id/thumbnail"
@@ -28,7 +28,7 @@
         android:layout_alignTop="@+id/thumbnail"
         android:layout_toRightOf="@+id/thumbnail"
         android:text="@string/task_item_reqnum_text"
-        android:textColor="#040404"
+        android:textColor="#404344"
         android:textSize="15sp"
         android:textStyle="bold"
         android:typeface="sans" />
@@ -43,8 +43,8 @@
         android:layout_marginTop="2dip"
         android:layout_toRightOf="@+id/thumbnail"
         android:text="@string/task_item_title_text"
-        android:textColor="#343434"
-        android:textSize="12sp" />
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/task_list_item_subdate"
@@ -56,7 +56,8 @@
         android:gravity="right"
         android:text="@string/task_item_subdate_text"
         android:textSize="12sp"
-        android:textStyle="bold" />
+        android:textColor="#343434"
+         />
 
     <!-- ImageView
         android:id="@+id/task_list_item_follow"
