--- a/PTT/res/menu/add_follow_task.xml
+++ b/PTT/res/menu/add_follow_task.xml
@@ -4,10 +4,11 @@
 
     <item
         android:id="@+id/action_search_task"
-        android:icon="@drawable/ic_action_search"
-        android:iconifiedByDefault="true"
+        android:orderInCategory="97"
         android:showAsAction="always"
-        android:title="@string/action_add_new_task"
-        />
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_action_search"
+        android:actionViewClass="android.widget.SearchView"/>
+    
 
 </menu>
