--- a/PTT/res/layout/activity_task_monitor.xml
+++ b/PTT/res/layout/activity_task_monitor.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:paddingTop="5dp">
-    
- <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:paddingTop="5dp" >
+
+    <ListView
         android:id="@+id/task_mornitor_list"
-        ></ListView>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+    </ListView>
+
 </LinearLayout>
