--- a/PTT/res/layout/c_chat.xml
+++ b/PTT/res/layout/c_chat.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/shape_bg"
     android:orientation="vertical" >
 
-   <include layout="@layout/c_custom_commen_title" />
+   <!--  include layout="@layout/c_custom_commen_title" /-->
 
     <FrameLayout
         android:layout_width="fill_parent"
