--- a/PTT/res/layout/explore_item.xml
+++ b/PTT/res/layout/explore_item.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/ic_action_alarms" />
 
     <TextView
-        android:textColor="#999999"
+        android:textColor="#dd000000"
         android:id="@+id/tv_tab_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
